default/objects/pq_CRUSH_User_Setting__c/pq_CRUSH_User_Setting__c.object-meta.xml
<CustomObject>
    <description>User Settings</description>
    <label>CRUSH User Setting</label>
    <nameField>
        <label>CRUSH User Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRUSH User Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>