default/objects/pq_CRUSH_User_Setting__c/fields/Account_Plan_Sort__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Sort__c</fullName>
    <label>Account Plan Sort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CreatedDate DESC</fullName>
                <default>true</default>
                <label>Created: Newest to Oldest</label>
            </value>
            <value>
                <fullName>CreatedDate ASC</fullName>
                <label>Created: Oldest to Newest</label>
            </value>
            <value>
                <fullName>Name ASC</fullName>
                <label>Name: Alphabetical</label>
            </value>
            <value>
                <fullName>Name DESC</fullName>
                <label>Name: Reverse Alphabetical</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>