default/objects/pq_CRUSH_User_Setting__c/fields/Account_Plan_Task_Filter__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Task_Filter__c</fullName>
    <description>Save filters for account plans</description>
    <inlineHelpText>Save filters for account plans</inlineHelpText>
    <label>Account Plan Task Filter</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>