default/objects/pq_CRUSH_User_Setting__c/fields/Objective_Task_Sort_Ascending__c.field-meta.xml
<CustomField>
    <fullName>Objective_Task_Sort_Ascending__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Objective Task Sort Ascending</label>
    <type>Checkbox</type>
</CustomField>