default/objects/pq_CRUSH_User_Setting__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CRUSH_User_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>